--- a/packages/bot-web-ui/src/pages/main/main.scss
+++ b/packages/bot-web-ui/src/pages/main/main.scss
@@ -159,20 +159,17 @@
                     z-index: 1;
                 }
 
-                @include mobile-or-tablet-screen {
-                    overflow-x: auto;
-                    overflow-y: hidden;
-                    -webkit-overflow-scrolling: touch;
-                    scroll-behavior: smooth;
+                overflow-x: auto;
+                overflow-y: hidden;
+                -webkit-overflow-scrolling: touch;
+                scroll-behavior: smooth;
 
-
-                    &::-webkit-scrollbar {
-                        display: none;
-                    }
-
-                    -ms-overflow-style: none;
-                    scrollbar-width: none;
+                &::-webkit-scrollbar {
+                    display: none;
                 }
+
+                -ms-overflow-style: none;
+                scrollbar-width: none;
 
                 &--header {
                     &--main {
