--- a/packages/bot-web-ui/src/pages/speedbot/quick-strategy.scss
+++ b/packages/bot-web-ui/src/pages/speedbot/quick-strategy.scss
@@ -905,11 +905,11 @@ html {
                     color: var(--amber);
                 }
 
-                .profit {
+                .profit-positive {
                     color: var(--green);
                 }
 
-                .loss {
+                .profit-negative {
                     color: var(--red);
                 }
 
